@@ -10,6 +10,10 @@ For a detailed view of what has changed, refer to the {url-repo}/commits/main[co
 
 * Repurpose example block as open block if filetype is not html
 
+=== Fixed
+
+* Preserve attribute entries above tabs block (#64)
+
 == 1.0.0-beta.5 (2023-05-28) - @mojavelinux
 
 === Changed
